Fixed small device thumbnails, added HPV and battery charger pages, captions

--- a/_posts/2023-10-18-fit3179-data-vis.md
+++ b/_posts/2023-10-18-fit3179-data-vis.md
@@ -14,7 +14,8 @@ This visualisation was made using *Tableau Public* and can be accessed [here](ht
 
 <style>
     img {
-        border-style: solid
+        border-style: solid;
+        border-width: 1px;
     }
     iframe {
         width:133%;
