Fixed typos and added farm lora & watchdog

--- a/_posts/2023-10-18-fit3179-data-vis.md
+++ b/_posts/2023-10-18-fit3179-data-vis.md
@@ -3,7 +3,7 @@ layout: post
 title: "FIT3179 Data visualisations"
 date: 2023-10-18 00:00:00 +1100
 categories: university
-tags: HPV "data visualisation"
+tags: HPV "data visualisation" university
 thumbnail: /assets/images/2023-10-18-fit3179-data-vis-whpsc.png
 ---
 I had to make a couple of data visualisations over the course of the FIT3179
