Added tagged pages, added WHPSC, timelapse update placeholder.

--- a/_posts/2022-02-01-bike-horn.md
+++ b/_posts/2022-02-01-bike-horn.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Musical bicycle siren"
 date:   2022-02-01 00:00:00 +1100
 categories: electronics
-tags: arduino HPV music electronics project
+tags: arduino HPV music electronics project microcontrollers
 thumbnail: "https://raw.githubusercontent.com/jgOhYeah/BikeHorn/main/Images/Overview_NB_Small.png"
 ---
 
