--- a/_posts/2022-12-10-lcdgraph.md
+++ b/_posts/2022-12-10-lcdgraph.md
@@ -3,7 +3,7 @@ layout: post
 title:  "LCDGraph Arduino Library"
 date:   2022-12-10 00:00:00 +1100
 categories: libraries
-tags: arduino library "data visualisation"
+tags: arduino library "data visualisation" microcontrollers
 thumbnail: "https://raw.githubusercontent.com/jgOhYeah/LCDGraph/main/extras/Mockup.svg"
 ---
 An Arduino library for drawing line graphs on alphanumeric displays using custom characters
