--- a/_posts/2023-10-18-fit3179-data-vis.md
+++ b/_posts/2023-10-18-fit3179-data-vis.md
@@ -17,20 +17,6 @@ This visualisation was made using *Tableau Public* and can be accessed [here](ht
         border-style: solid;
         border-width: 1px;
     }
-    iframe {
-        width:133%;
-        height: 1200px;
-        -moz-transform: scale(0.75, 0.75); 
-        -webkit-transform: scale(0.75, 0.75); 
-        -o-transform: scale(0.75, 0.75);
-        -ms-transform: scale(0.75, 0.75);
-        transform: scale(0.75, 0.75); 
-        -moz-transform-origin: top left;
-        -webkit-transform-origin: top left;
-        -o-transform-origin: top left;
-        -ms-transform-origin: top left;
-        transform-origin: top left;"
-    }
 </style>
 
 [![World Human Powered Speed Challenge visualisation](/assets/images/2023-10-18-fit3179-data-vis-whpsc.png)](https://public.tableau.com/views/WorldHumanPoweredSpeedChallenge/WorldHumanPoweredSpeedChallenge?:language=en-US&:display_count=n&:origin=viz_share_link)
@@ -42,4 +28,4 @@ This was done using Vega-Lite with some fairly tight deadlines.
 
 The original page is [here](https://jgohyeah.github.io/FIT3179/Assignment2/)
 
-<iframe src="https://jgohyeah.github.io/FIT3179/Assignment2/"></iframe>
+<iframe src="https://jgohyeah.github.io/FIT3179/Assignment2/" class="webpage-iframe"></iframe>
