Spell checking, adding tuneplayer logo

--- a/_posts/2022-12-10-lcdgraph.md
+++ b/_posts/2022-12-10-lcdgraph.md
@@ -10,6 +10,6 @@ An Arduino library for drawing line graphs on alphanumeric displays using custom
 
 {%- include github-bookmark.html name="LCDGraph" description="An Arduino library for drawing line graphs on alphanumeric displays using custom characters" url="https://github.com/jgOhYeah/LCDGraph" thumbnail="https://raw.githubusercontent.com/jgOhYeah/LCDGraph/main/extras/Mockup.svg" -%}
 
-This library uses custom characters to draw simple line graphs on Hitachi HD44780 based alphanumeric displays using the built in LiquidCrystal library. Other libraries can be used if needed for the likes of displays driven through I2C.
+This library uses custom characters to draw simple line graphs on Hitachi HD44780 based alphanumeric displays using the built-in LiquidCrystal library. Other libraries can be used if needed for the likes of displays driven through I2C.
 
-The x axis is always the data point while the y axis can be scaled as required, even after data has been entered.
+The x-axis is always the data point while the y-axis can be scaled as required, even after data has been entered.
