--- a/_posts/2022-02-01-bike-horn.md
+++ b/_posts/2022-02-01-bike-horn.md
@@ -7,8 +7,8 @@ tags: arduino HPV music electronics project microcontrollers
 thumbnail: "https://raw.githubusercontent.com/jgOhYeah/BikeHorn/main/Documentation/Images/Overview_NB_Small.png"
 ---
 
-A "musical" siren for bicycles. This design was published in the Circuit Notebook section of the [Februrary 2022 issue](https://www.siliconchip.com.au/Issue/2022/February) of the Silicon Chip magazine.
+A "musical" siren for bicycles. This design was published in the Circuit Notebook section of the [February 2022 issue](https://www.siliconchip.com.au/Issue/2022/February) of the Silicon Chip magazine.
 
-See the article or its github repository for more information.
+See the article or its GitHub repository for more information.
 
-{%- include github-bookmark.html name="BikeHorn" description="A \"Musical\" siren for bicycles" url="https://github.com/jgOhYeah/BikeHorn" thumbnail="https://raw.githubusercontent.com/jgOhYeah/BikeHorn/main/Documentation/Images/Overview_NB_Small.png" -%}
+{%- include github-bookmark.html name="BikeHorn" description="A \"Musical\" siren for bicycles" url="https://github.com/jgOhYeah/BikeHorn" thumbnail="https://raw.githubusercontent.com/jgOhYeah/BikeHorn/main/Documentation/Images/Overview_NB_Small.png"-%}
